[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[sub_resource type="FontVariation" id="Font_bold"]
spacing_glyph = 5

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="DistanceLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 52.0
text = "0 m"
visible = false

[node name="MenuScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackstoryLabel" type="Label" parent="MenuScreen"]
anchor_left = 0.05
anchor_top = 0.04
anchor_right = 0.95
anchor_bottom = 0.38
text = "Jerry. Age 34. Former tax accountant.
Fired on a Tuesday.

He found his late grandfather's snowboard in the garage.
He drove to the mountain. He pointed it downhill.

That was three weeks ago. Jerry has not stopped."
horizontal_alignment = 1
vertical_alignment = 0
autowrap_mode = 3
theme_override_font_sizes/font_size = 11

[node name="TitleLabel" type="Label" parent="MenuScreen"]
anchor_left = 0.0
anchor_top = 0.38
anchor_right = 1.0
anchor_bottom = 0.68
text = "JERRY360"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 38
theme_override_fonts/font = SubResource("Font_bold")
theme_override_colors/font_color = Color(1.0, 0.82, 0.1, 1)
theme_override_colors/font_outline_color = Color(1.0, 0.97, 0.55, 1)
theme_override_constants/outline_size = 2
theme_override_colors/font_shadow_color = Color(0.35, 0.2, 0.0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2

[node name="StartButton" type="Button" parent="MenuScreen"]
anchor_left = 0.38
anchor_top = 0.70
anchor_right = 0.62
anchor_bottom = 0.78
text = "Start Shredding?"

[node name="DeathScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="VBox" type="VBoxContainer" parent="DeathScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -100.0
offset_right = 120.0
offset_bottom = 100.0

[node name="FinalDistanceLabel" type="Label" parent="DeathScreen/VBox"]
text = "Distance: 0 m"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="DeathScreen/VBox"]
text = "Best: 0 m"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="DeathScreen/VBox"]
text = "Restart"

[node name="MenuButton" type="Button" parent="DeathScreen/VBox"]
text = "Menu"

[connection signal="pressed" from="MenuScreen/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="DeathScreen/VBox/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="DeathScreen/VBox/MenuButton" to="." method="_on_menu_pressed"]
